# espro

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tasks.py
docs/: aioesphomeapi_reference.md  disposable_hass.md  esphome_mock.md  esphome_pain_points.md  zigbee2mqtt_mqtt_reference.md
integration/: README.md  configuration.yaml  create-snapshot.sh  docker-compose.yml  test_autodiscovery.sh
integration/ha/: configuration.yaml  init-ha.sh
integration/ha-data/: home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
integration/ha/snapshot/.storage/: assist_pipeline.pipelines  auth  auth_provider.homeassistant  core.area_registry  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  core.uuid  http  http.auth  person
src/espro/: __init__.py  cli.py  config.py  core.py  database.py  logging.py  mock_device.py  models.py  scanner.py  services.py  storage.py
src/espro/cli/: app.py  common.py  config.py  devices.py  helpers.py  info.py  init_cmd.py  logs.py  mock.py  scan.py  validate.py
src/espro/cli/commands/: __init__.py  config.py  device_logs.py  devices.py  info.py  init.py  mock.py  scan.py  validate.py
src/espro/commands/: __init__.py  mock_device.py  scan.py
src/espro/config/: __init__.py  loader.py  paths.py  settings.py
src/espro/core/: __init__.py  mock_device.py  scanner.py  validator.py
src/espro/models/: __init__.py  config.py  device.py  devices.py  validation.py
src/espro/storage/: __init__.py  database.py  physical.py
src/espro/utils/: log_setup.py  logging.py  redaction.py
tests/: conftest.py  test_database.py  test_espro.py  test_internals.py  test_public.py  test_scan_cli.py  test_scan_logging.py  test_services.py
