[project]
name = "espro"
version = "0.1.0"
description = "Professional ESPHome infrastructure: manage devices without breaking entity IDs, automations, or dashboards"
readme = "README.md"
authors = [
    { name = "Jev Kuznetsov", email = "jev.kuznetsov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
]

[project.scripts]
espro = "espro.cli:app"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.1",
    "invoke>=2.2.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.1.0",
    "ruff>=0.12.8",
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

#------------------ruff configuration----------------
[tool.ruff.lint]
extend-select = ["B", "I", "C4", "TID", "SIM", "PLE", "RUF"]
ignore = [
    "D100", "D101", "D102", "D103",  # Missing docstrings
    "N806", "N803",  # Invalid name patterns
    "G201",  # Logging f-string interpolation
    "ARG001",  # Unused function argument
    "BLE001",  # Blind except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]  # Allow unused arguments in tests