[project]
name = "espro"
version = "0.1.0"
description = "ESPHome device control plane: registry, lifecycle, and stable logical identities (optional MQTT bridge)"
readme = "README.md"
authors = [
    { name = "Jev Kuznetsov", email = "jev.kuznetsov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioesphomeapi>=29.0.0",
    "coloredlogs>=15.0",
    "esphome>=2025.12.6",
    "pydantic>=2.0.0",
    "rich>=13.0",
    "typer>=0.15.0",
    "zeroconf>=0.132.0",
]

[project.scripts]
espro = "espro.cli.app:app"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.1.0",
    "ruff>=0.12.8",
]

#------------------ruff configuration----------------
[tool.ruff.lint]
extend-select = ["B", "I", "C4", "TID", "SIM", "PLE", "RUF"]
ignore = [
    "D100", "D101", "D102", "D103",  # Missing docstrings
    "N806", "N803",  # Invalid name patterns
    "G201",  # Logging f-string interpolation
    "ARG001",  # Unused function argument
    "BLE001",  # Blind except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]  # Allow unused arguments in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["temp", ".git", ".venv", "dist", "build"]

[tool.coverage.run]
omit = ["src/espro/cli/*"]
